# fmureader

./: .bumpversion.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/fmureader/: fmi.py  fmi2.py  fmi3.py
tests/: test_fmi.py  test_fmi2.py  test_fmi3.py
