[project]
name = "fmureader"
version = "0.1.1rc0"
description = "A Python library for reading and parsing Functional Mock-up Interface model description XML file."
readme = "README.md"
authors = [
    { name = "coder", email = "coder@timeintegral.ai" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.5,<3.0.0",
]

[project.urls]
Repository = "https://github.com/time-integral/fmureader"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pyright]
include = [
    "src",
]

[tool.uv]
default-groups = ["dev"]
package = true
